# myclone

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 006b0f34361e_merge_persona_validation_and_user_.py  0e763f7538c0_create_persona_prompts_table.py  10ad9fd2fe04_add_phone_field_to_users_table.py  132600cde686_add_workflow_system_tables_persona_.py  13b9596d4900_add_stripe_integration_tables.py  15fa73ba2dc4_add_conversation_type_field_to_.py  174efc03f2f3_update_youtube_video_unique_constraint_.py  1a2b3c4d5e6f_add_email_capture_settings_to_personas_and_conversations.py  1aa7dbeebdfb_add_widget_config_to_users.py  1b036e1c1421_replace_persona_unique_constraint_with_.py  1bd75c734ca5_add_strict_guideline_and_template_.py  1d7355af2e26_add_voice_enabled_to_personas.py  1e15f11578ab_make_custom_embedding_columns_nullable.py  1ecf868eb955_merge_embeddings_and_prompt_template_.py  208bcc9088c5_add_role_expertise_to_personas.py  22883c686f45_add_archived_status_to_scraping_jobs.py  22af6d89f8de_add_session_token_to_workflow_sessions.py  272ec6abd141_add_audio_video_document_types.py  2dd8da251a96_add_suggested_questions_to_personas.py  301ca550b0cc_merge_migration_branches.py  30de497b1ee0_remove_changed_at_from_persona_prompts_.py  30e384eeba91_add_persona_access_control_is_private.py  346f0e7a1fad_add_template_columns_to_persona_.py  3675d5d1c636_add_user_id_to_personas.py  3a83dd84ed15_create_initial_tables_base.py  3d48659cd397_add_username_validation_constraints.py  3dac90beeb35_add_widget_tokens_table.py  (+102 more)
backend/app/: main.py
backend/docker/: Dockerfile.localstack  Dockerfile.migrations  Dockerfile.voice-processing  localstack-init.sh
backend/docs/: API_DOCUMENTATION.md  AWS_DEPLOYMENT.md  CARTESIA_API.md  CODE_QUALITY.md  CUSTOM_DOMAIN_IMPLEMENTATION.md  DATABASE_SCHEMA.md  DELETE_USER_PROCEDURE.md  DEPLOYMENT.md  DOCUMENT_DUPLICATE_DETECTION.md  DUAL_EMBEDDING_SYSTEM.md  ECS_GRACEFUL_SHUTDOWN_SETUP.md  EMAIL_PASSWORD_AUTH.md  EVALUATION_SYSTEM_DOCUMENTATION.md  LIVEKIT_AGENT_ARCHITECTURE.md  LIVEKIT_OPTIMIZATION_RESEARCH.md  LIVEKIT_RECORDING_ARCHITECTURE.md  LIVEKIT_TASKS_AND_TOOLS.md  LOCALSTACK_DEPLOYMENT.md  LlamaIndex-RAG.md  MIGRATIONS.md  PERSONA_ACCESS_CONTROL.md  PERSONA_KNOWLEDGE_ARCHITECTURE.md  PERSONA_LIMITS_IMPLEMENTATION.md  SENTRY_HTTP_ERROR_CAPTURE.md  SESSION_TIME_LIMITS.md  SUGGESTED_QUESTIONS_FEATURE.md  TEXT_USAGE_LIMITS.md  USERNAME_VALIDATION_GUIDE.md  VOICE_PROCESSING_DOCKER.md  VOICE_USAGE_LIMITS.md  VOYAGE_AI_SETUP.md  WHITELABEL_EMAIL_DOMAINS.md  WORKFLOW_SYSTEM_DEVELOPER_GUIDE.md  YOUTUBE_COOKIES_SETUP.md  YOUTUBE_PROXY_SETUP.md  YOUTUBE_VOICE_CLONING_QUICK_START.md
backend/evaluations/: LIVEKIT_EVAL_README.md  __init__.py  livekit_conversation_eval.py  livekit_document_eval.py  livekit_text_agent_eval.py
backend/livekit/: entrypoint.py  langfuse_integration.py  langfuse_otel_patch.py  livekit_agent.py
backend/shared/: __init__.py  config.py  s3_utils.py  secrets.py
backend/workers/: __init__.py
(+846 files in other folders)
